# jupyter-in-a-shell

./: README.md  notebook_toolkit.py  pyproject.toml  requirements.txt  run_notebook.py
